# vtimezones-rs

./: .gitmodules  Cargo.toml  Makefile  README.md  build.rs  timezones.rs
src/: lib.rs
tzdata_ics/Africa/: Abidjan.ics  Algiers.ics  Bissau.ics  Cairo.ics  Casablanca.ics  Ceuta.ics  El_Aaiun.ics  Johannesburg.ics  Juba.ics  Khartoum.ics  Lagos.ics  Maputo.ics  Monrovia.ics  Nairobi.ics  Ndjamena.ics  Sao_Tome.ics  Tripoli.ics  Tunis.ics  Windhoek.ics
tzdata_ics/America/: Adak.ics  Anchorage.ics  Araguaina.ics  Asuncion.ics  Bahia.ics  Bahia_Banderas.ics  Barbados.ics  Belem.ics  Belize.ics  Boa_Vista.ics  Bogota.ics  Boise.ics  Cambridge_Bay.ics  Campo_Grande.ics  Cancun.ics  Caracas.ics  Cayenne.ics  Chicago.ics  Chihuahua.ics  Ciudad_Juarez.ics  Costa_Rica.ics  Coyhaique.ics  Cuiaba.ics  Danmarkshavn.ics  Dawson.ics  Dawson_Creek.ics  Denver.ics  Detroit.ics  Edmonton.ics  Eirunepe.ics  El_Salvador.ics  Fort_Nelson.ics  Fortaleza.ics  Glace_Bay.ics  Goose_Bay.ics  Grand_Turk.ics  Guatemala.ics  Guayaquil.ics  Guyana.ics  Halifax.ics  (+56 more)
tzdata_ics/Antarctica/: Casey.ics  Davis.ics  Macquarie.ics  Mawson.ics  Palmer.ics  Rothera.ics  Troll.ics  Vostok.ics
tzdata_ics/Asia/: Almaty.ics  Amman.ics  Anadyr.ics  Aqtau.ics  Aqtobe.ics  Ashgabat.ics  Atyrau.ics  Baghdad.ics  Baku.ics  Bangkok.ics  Barnaul.ics  Beirut.ics  Bishkek.ics  Chita.ics  Colombo.ics  Damascus.ics  Dhaka.ics  Dili.ics  Dubai.ics  Dushanbe.ics  Famagusta.ics  Gaza.ics  Hebron.ics  Ho_Chi_Minh.ics  Hong_Kong.ics  Hovd.ics  Irkutsk.ics  Jakarta.ics  Jayapura.ics  Jerusalem.ics  Kabul.ics  Kamchatka.ics  (+42 more)
(+158 files in other folders)
